# proi-task-word-counter

./: CMakeLists.txt  README.md  entry.cpp  entry.h  moby_dick.cpp  testGoogle.cpp  word_counter.cpp  word_counter.h
